--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,30 @@
+aniso8601==9.0.1
+black==22.1.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.0.3
+defusedxml==0.7.1
 Flask==2.0.3
+Flask-HTTPAuth==4.5.0
+Flask-RESTful==0.3.9
+greenlet==1.1.2
+httpie==3.1.0
 idna==3.3
 itsdangerous==2.1.0
 Jinja2==3.0.3
 MarkupSafe==2.1.0
+multidict==6.0.2
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.5.1
+Pygments==2.11.2
+PySocks==1.7.1
+pytz==2021.3
 requests==2.27.1
+requests-toolbelt==0.9.1
+six==1.16.0
+SQLAlchemy==1.4.32
+tomli==2.0.1
+typing-extensions==4.1.1
 urllib3==1.26.8
 Werkzeug==2.0.3
